--- a/views/news.handlebars
+++ b/views/news.handlebars
@@ -6,38 +6,38 @@
 <h1>News</h1>
 <a href="" class="tickets-button">Filter</a>
 <div class="news">
-  <div>
+  <div class="news-box">
     <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
     <h3>Medical Report: Stéphane Charlin fällt 6-8 Wochen aus</h3>
   </div>
-  <div>
-    <img src="" alt="" />
+  <div class="news-box">
+    <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
     <h3>Stellungnahme der SCL Tigers zu den Vorfällen anlässlich des Heimspiels
       vom 31. Januar 2025 in Langnau</h3>
   </div>
-  <div>
-    <img src="" alt="" />
+  <div class="news-box">
+    <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
     <h3>Vierter Sieg gegen den SC Bern in dieser Saison</h3>
   </div>
-  <div>
-    <img src="" alt="" />
+  <div class="news-box">
+    <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
     <h3>Schläglerei artet aus. Matthias Muster wurde dreimal die Nase gebrochen.</h3>
   </div>
-  <div>
-    <img src="" alt="" />
+  <div class="news-box">
+    <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
     <h3>Vierter Sieg gegen den SC Bern in dieser Saison</h3>
   </div>
-  <div>
-    <img src="" alt="" />
+  <div class="news-box">
+    <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
     <h3>Schläglerei artet aus. Matthias Muster wurde dreimal die Nase gebrochen.</h3>
   </div>
 </div>
 
 <div class="breadcrumbs-nav">
   <ul>
-    <li><a href="/news.handlebars">1</a></li>
-    <li><a href="/news2.handlebars">2</a></li>
-    <li><a href="">3</a></li>
+    <li><a href="/news">1</a></li>
+    <li><a href="/news2">2</a></li>
+    <li><a href="/start">3</a></li>
   </ul>
 </div>
 
