--- a/views/start.handlebars
+++ b/views/start.handlebars
@@ -11,117 +11,206 @@
 <!-- NEWS --------------------------------------------->
 <div>
   <h1>News</h1>
-<div class="news">
-    <div>
-      <img src="" alt="" />
+<div class="news-grid">
+    <div class="news-card">
+      <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
       <h3>Medical Report: Stéphane Charlin fällt 6-8 Wochen aus</h3>
     </div>
-    <div>
-      <img src="" alt="" />
+    <div class="news-card">
+      <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
       <h3>Stellungnahme der SCL Tigers zu den Vorfällen anlässlich des Heimspiels
         vom 31. Januar 2025 in Langnau</h3>
     </div>
-    <div>
-      <img src="" alt="" />
+    <div class="news-card">
+      <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
       <h3>Vierter Sieg gegen den SC Bern in dieser Saison</h3>
     </div>
-    <div>
-      <img src="" alt="" />
+    <div class="news-card">
+      <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
       <h3>Schläglerei artet aus. Matthias Muster wurde dreimal die Nase gebrochen.</h3>
     </div>
-  <a href="news.handlebars" class="button">Mehr</a>
 </div>
-
+<a href="news.handlebars" class="button">Mehr</a>
 
 <!-- SOCIAL WALL --------------------------------------------->
 <h1> Social Wall</h1>
 <div class="Social-Wall">
-<div class="social-wall-box">
-  <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
-  <h4>Datum</h4>
-  <h2>Märit</h2>
-  <h3>Am Mittwoch, 26. Februar, ist wieder Langnau-Märit! 
-    Ihr findet unseren Stand aber nicht am Märit selber, sondern in der Emmetal Versicherung Arena: Der Fanshop ist von 11:00 bis 16:00 Uhr geöffnet.#chömetvrbi #mirfreueüs #ämmitauermärit
-    </h3>
-    <i class="fa-solid fa-heart" style="color: #484848;"></i>
-    <i class="fa-solid fa-comment" style="color: #484848;"></i>
-    <i class="fa-solid fa-share-nodes" style="color: #484848;"></i>
+
+<div class="card">
+  <div class="image-wrapper">
+    <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
+    <div class="corner-icon">
+      <span class="icon"><i class="fa-brands fa-instagram" style="color: #484848;"></i></span>
+    </div>
+  </div>
+  <div class="content">
+    <p class="date">26. Februar 2025</p>
+    <h2>Märit</h2>
+    <p class="description">
+      Am Mittwoch, 26. Februar, ist wieder Langnau-Märit!
+    </p>
+    <p class="hashtags">#mirfreueüs #ämmitauermärit</p>
+    <div class="interactions">
+      <i class="fa-solid fa-heart" style="color: #484848;"></i>
+      <i class="fa-solid fa-comment" style="color: #484848;"></i>
+      <i class="fa-solid fa-share-nodes" style="color: #484848;"></i>
+    </div>
+  </div>
 </div>
-<div class="social-wall-box">
+
+<div class="card">
+  <div class="image-wrapper">
+    <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
+    <div class="corner-icon">
+      <span class="icon"><i class="fa-brands fa-instagram" style="color: #484848;"></i></span>
+    </div>
+  </div>
+  <div class="content">
+    <p class="date">Datum</p>
+    <h2>Video</h2>
+    <p class="description">
+      Dario Allpenspach - Best Player
+    </p>
+    <p class="hashtags">#därudubischnä #vidöli </p>
+    <div class="interactions">
+      <i class="fa-solid fa-heart" style="color: #484848;"></i>
+      <i class="fa-solid fa-comment" style="color: #484848;"></i>
+      <i class="fa-solid fa-share-nodes" style="color: #484848;"></i>
+    </div>
+  </div>
+</div>
+
+<div class="card">
+  <div class="image-wrapper">
+    <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
+    <div class="corner-icon">
+      <span class="icon"><i class="fa-brands fa-instagram" style="color: #484848;"></i></span>
+    </div>
+  </div>
+  <div class="content">
+    <p class="date">Datum</p>
+    <h2>Schlägerei</h2>
+    <p class="description">
+      Beim Letzten Spiel gegen die Bieler kam es zu einer heftigen Schlägerei.
+    </p>
+    <p class="hashtags">#üsduetsleid #dsischunfair</p>
+    <div class="interactions">
+      <i class="fa-solid fa-heart" style="color: #484848;"></i>
+      <i class="fa-solid fa-comment" style="color: #484848;"></i>
+      <i class="fa-solid fa-share-nodes" style="color: #484848;"></i>
+    </div>
+  </div>
+</div>
+
+<div class="card">
+  <div class="image-wrapper">
+    <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
+    <div class="corner-icon">
+      <span class="icon"><i class="fa-brands fa-instagram" style="color: #484848;"></i></span>
+    </div>
+  </div>
+  <div class="content">
+    <p class="date">Datum</p>
+    <h2>Schlägerei</h2>
+    <p class="description">
+      Beim Letzten Spiel gegen die Bieler kam es zu einer heftigen Schlägerei.
+    </p>
+    <p class="hashtags">#üsduetsleid #dsischunfair</p>
+    <div class="interactions">
+      <i class="fa-solid fa-heart" style="color: #484848;"></i>
+      <i class="fa-solid fa-comment" style="color: #484848;"></i>
+      <i class="fa-solid fa-share-nodes" style="color: #484848;"></i>
+    </div>
+  </div>
+</div>
+
+<div class="card">
+<div class="image-wrapper">
   <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
-  <h4>Datum</h4>
+  <div class="corner-icon">
+    <span class="icon"><i class="fa-brands fa-instagram" style="color: #484848;"></i></span>
+  </div>
+</div>
+<div class="content">
+  <p class="date">Datum</p>
   <h2>Video</h2>
-  <h3>Dario Allpenspach - Best Player #därudubischnä #vidöli 
-    </h3>
+  <p class="description">
+    Dario Allpenspach - Best Player
+  </p>
+  <p class="hashtags">#därudubischnä #vidöli </p>
+  <div class="interactions">
     <i class="fa-solid fa-heart" style="color: #484848;"></i>
     <i class="fa-solid fa-comment" style="color: #484848;"></i>
     <i class="fa-solid fa-share-nodes" style="color: #484848;"></i>
+  </div>
 </div>
-<div class="social-wall-box">
-  <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
-  <h4>Datum</h4>
-  <h2>Schlägerei</h2>
-  <h3>Beim Letzten Spiel gegen die Bieler kam es zu einer heftigen Schlägerei.#üsduetsleid #dsischunfair
+</div>
 
-    </h3>
-    <i class="fa-solid fa-heart" style="color: #484848;"></i>
-    <i class="fa-solid fa-comment" style="color: #484848;"></i>
-    <i class="fa-solid fa-share-nodes" style="color: #484848;"></i>
-</div>
-<div class="social-wall-box">
+<div class="card">
+<div class="image-wrapper">
   <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
-  <h4>Datum</h4>
+  <div class="corner-icon">
+    <span class="icon"><i class="fa-brands fa-instagram" style="color: #484848;"></i></span>
+  </div>
+</div>
+<div class="content">
+  <p class="date">Datum</p>
   <h2>Schlägerei</h2>
-  <h3>Beim Letzten Spiel gegen die Bieler kam es zu einer heftigen Schlägerei.#üsduetsleid #dsischunfair
-
-    </h3>
+  <p class="description">
+    Beim Letzten Spiel gegen die Bieler kam es zu einer heftigen Schlägerei.
+  </p>
+  <p class="hashtags">#üsduetsleid #dsischunfair</p>
+  <div class="interactions">
     <i class="fa-solid fa-heart" style="color: #484848;"></i>
     <i class="fa-solid fa-comment" style="color: #484848;"></i>
     <i class="fa-solid fa-share-nodes" style="color: #484848;"></i>
+  </div>
 </div>
-<div class="social-wall-box">
+</div>
+
+<div class="card">
+<div class="image-wrapper">
   <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
-  <h4>Datum</h4>
+  <div class="corner-icon">
+    <span class="icon"><i class="fa-brands fa-instagram" style="color: #484848;"></i></span>
+  </div>
+</div>
+<div class="content">
+  <p class="date">Datum</p>
   <h2>Schlägerei</h2>
-  <h3>Beim Letzten Spiel gegen die Bieler kam es zu einer heftigen Schlägerei.#üsduetsleid #dsischunfair
-
-    </h3>
+  <p class="description">
+    Beim Letzten Spiel gegen die Bieler kam es zu einer heftigen Schlägerei.
+  </p>
+  <p class="hashtags">#üsduetsleid #dsischunfair</p>
+  <div class="interactions">
     <i class="fa-solid fa-heart" style="color: #484848;"></i>
     <i class="fa-solid fa-comment" style="color: #484848;"></i>
     <i class="fa-solid fa-share-nodes" style="color: #484848;"></i>
+  </div>
 </div>
-<div class="social-wall-box">
-  <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
-  <h4>Datum</h4>
-  <h2>Schlägerei</h2>
-  <h3>Beim Letzten Spiel gegen die Bieler kam es zu einer heftigen Schlägerei.#üsduetsleid #dsischunfair
+</div>
 
-    </h3>
-    <i class="fa-solid fa-heart" style="color: #484848;"></i>
-    <i class="fa-solid fa-comment" style="color: #484848;"></i>
-    <i class="fa-solid fa-share-nodes" style="color: #484848;"></i>
-</div>
-<div class="social-wall-box">
-  <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
-  <h4>Datum</h4>
-  <h2>Schlägerei</h2>
-  <h3>Beim Letzten Spiel gegen die Bieler kam es zu einer heftigen Schlägerei.#üsduetsleid #dsischunfair
+<div class="card">
+  <div class="image-wrapper">
+    <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
+    <div class="corner-icon">
+      <span class="icon"><i class="fa-brands fa-instagram" style="color: #484848;"></i></span>
+    </div>
+  </div>
+  <div class="content">
+    <p class="date">Datum</p>
+    <h2>Schlägerei</h2>
+    <p class="description">
+      Beim Letzten Spiel gegen die Bieler kam es zu einer heftigen Schlägerei.
+    </p>
+    <p class="hashtags">#üsduetsleid #dsischunfair</p>
+    <div class="interactions">
+      <i class="fa-solid fa-heart" style="color: #484848;"></i>
+      <i class="fa-solid fa-comment" style="color: #484848;"></i>
+      <i class="fa-solid fa-share-nodes" style="color: #484848;"></i>
+    </div>
+  </div>
+  </div>
 
-    </h3>
-    <i class="fa-solid fa-heart" style="color: #484848;"></i>
-    <i class="fa-solid fa-comment" style="color: #484848;"></i>
-    <i class="fa-solid fa-share-nodes" style="color: #484848;"></i>
-</div>
-<div class="social-wall-box">
-  <img src="/uploads/a_Tigers-Lausanne_23-03-2025_001.jpg-1400x933.webp" alt="">
-  <h4>Datum</h4>
-  <h2>Schlägerei</h2>
-  <h3>Beim Letzten Spiel gegen die Bieler kam es zu einer heftigen Schlägerei.#üsduetsleid #dsischunfair
-
-    </h3>
-    <i class="fa-solid fa-heart" style="color: #484848;"></i>
-    <i class="fa-solid fa-comment" style="color: #484848;"></i>
-    <i class="fa-solid fa-share-nodes" style="color: #484848;"></i>
-</div>
 </div>
 </main>
