--- a/views/tickets.handlebars
+++ b/views/tickets.handlebars
@@ -125,12 +125,11 @@
   <div class="tickets-right">
     <div>
       <h2>Family-Corner</h2>
-      <table>
+      <table class="styled-table">
         <thead>
-            <td class="title-table"> </td>
-            <td class="title-table"> </td>
-            <td class="title-table">Platz</td>
-            <td class="title-table">Preise*</td>
+            <th class="title-table"> </th>
+            <th class="title-table">Platz</th>
+            <th class="title-table">Preise*</th>
         </thead>
           <tr>
             <td>Vierköpfige Familie</td>
@@ -151,10 +150,10 @@
     <img src="/uploads/SCL-Tigers_Sektorenplan_2425-1024x697.png" alt="" />
 
     <div class="sectors">
-      <a href="https://www.scltigers.ch/wp-content/uploads/20240412_SCL_SaalplanSK_2425_Platzgenau.pdf"
-        ><i class="fa-solid fa-file-arrow-down" style="color: #ed1c24;"></i><h5>Saalplan Platz genau</h5></a>
-        <a href="https://www.scltigers.ch/wp-content/uploads/SCL_Saalplan2425_Sektoren.pdf"
-        ><i class="fa-solid fa-file-arrow-down" style="color: #ed1c24;"></i><h5>Saalplan Übersicht</h5></a>
+      <h5><i class="fa-solid fa-file-arrow-down" style="color: #ed1c24;"><a href="https://www.scltigers.ch/wp-content/uploads/20240412_SCL_SaalplanSK_2425_Platzgenau.pdf"
+        ></a></i>Saalplan Platz genau</h5>
+        <h5><i class="fa-solid fa-file-arrow-down" style="color: #ed1c24;"><a href="https://www.scltigers.ch/wp-content/uploads/SCL_Saalplan2425_Sektoren.pdf"
+          ></a></i>Saalplan Übersicht</h5>
     </div>
     <div>
       <h2>Allgemeine Matchinfos</h2>
