--- a/views/spielplan.handlebars
+++ b/views/spielplan.handlebars
@@ -69,8 +69,6 @@
     <h5><i class="fa-solid fa-file-arrow-down" style="color: #ed1c24;"><a
         href="https://www.scltigers.ch/wp-content/uploads/Spielplan_Tigers_2024-25_21.01.2025.pdf"></a></i>Spielplan Tigers - Qualifikation (PDF)</h5>
 
-<h5><i class="fa-solid fa-file-arrow-down" style="color: #ed1c24;">
-
-<a href="https://www.scltigers.ch/wp-content/uploads/Spielplan_NL_2024_2025.pdf"></a></i>Modus und Spielplan National League</h5>
+<h5><i class="fa-solid fa-file-arrow-down" style="color: #ed1c24;"><a href="https://www.scltigers.ch/wp-content/uploads/Spielplan_NL_2024_2025.pdf"></a></i>Modus und Spielplan National League</h5>
 </div>
 </main>
