--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,34 +17,35 @@
     />
   </head>
 
-  <body>
+  {{{body}}}
 
-    {{{body}}}
+  <footer>
 
-    <footer>
-
-      <h5>Kontakt</h5><p>
-        <a href="/page">Erklärungsseite</a></p>
-      <p> <a href="/impressum">Impressum</a></p>
-      <div class="adressblock">
+    <h5>Kontakt</h5><p>
+      <a href="/page">Erklärungsseite</a></p>
+    <p> <a href="/impressum">Impressum</a></p>
+    <div class="adressblock">
+      <a
+        href="https://www.google.com/maps/place/SCL+Tigers+AG/@46.9368167,7.7841166,710m/data=!3m2!1e3!4b1!4m6!3m5!1s0x478fc9242f595fa9:0x513f1e013d768a27!8m2!3d46.9368167!4d7.7866915!16s%2Fg%2F1pv6pssp0?entry=ttu&g_ep=EgoyMDI1MDUwNy4wIKXMDSoASAFQAw%3D%3D"
+      >
         <p>SCL Tigers AG</p>
         <p>Güterstrasse 18</p>
         <p>Postfach</p>
-        <p>CH-3550 Langnau i.E.</p>
-      </div>
-      <p><i class="fa-solid fa-phone" style="color: #ffffff;"></i><a
-          href="+41 34 408 35 35"
-        >+41 34 408 35 35</a>
-      </p>
-      <p><i class="fa-solid fa-envelope" style="color: #ffffff;"></i><a
-          href="info@scltigers.ch"
-        >info@scltigers.ch</a></p>
-
-      <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
-      <i class="fa-brands fa-youtube" style="color: #ffffff;"></i>
+        <p>CH-3550 Langnau i.E.</p></a>
+    </div>
+    <p><i class="fa-solid fa-phone" style="color: #ffffff;"></i><a
+        href="+41 34 408 35 35"
+      >+41 34 408 35 35</a>
+    </p>
+    <p><i class="fa-solid fa-envelope" style="color: #ffffff;"></i><a
+        href="info@scltigers.ch"
+      >info@scltigers.ch</a></p>
+    <a href="https://www.instagram.com/scl_tigers_official/">
+      <i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
+    <a href="https://www.youtube.com/@SCLTigersTV">
+      <i class="fa-brands fa-youtube" style="color: #ffffff;"></i></a>
+    <a href="https://www.facebook.com/scltigers.official/">
       <i class="fa-brands fa-square-facebook" style="color: #ffffff;"></i>
-
-    </footer>
-
-  </body>
+    </a>
+  </footer>
 </html>
