--- a/views/start.handlebars
+++ b/views/start.handlebars
@@ -9,7 +9,7 @@
 
 
 <!-- NEWS --------------------------------------------->
-<div>
+<section class="news-start">
   <h1>News</h1>
 <div class="news-grid">
     <div class="news-card">
@@ -30,9 +30,14 @@
       <h3>Schläglerei artet aus. Matthias Muster wurde dreimal die Nase gebrochen.</h3>
     </div>
 </div>
-<a href="news.handlebars" class="button">Mehr</a>
+<a href="/news" class="news-button">Mehr</a>
+</section>
+
+
+
 
 <!-- SOCIAL WALL --------------------------------------------->
+<div class="box-social">
 <h1> Social Wall</h1>
 <div class="Social-Wall">
 
@@ -212,5 +217,7 @@
   </div>
   </div>
 
+</div>
+<a href="/start" class="news-button">Mehr</a>
 </div>
 </main>
