--- a/public/style.css
+++ b/public/style.css
@@ -597,6 +597,13 @@ table {
   margin-top: 40px;
 }
 
+/*****Stadion******/
+.stadion-picture {
+  width: 20vw;
+  height: 300px;
+  border-radius: 8px;
+  margin-right: 2vw;
+}
 
 /******************** Spielplan ********************************/
 a.gameplan {
