--- a/views/aboutus.handlebars
+++ b/views/aboutus.handlebars
@@ -5,5 +5,12 @@
 <main>
 <h1>Über uns</h1>
 <h2>Team</h2>
+<img src="/uploads/SCL_24-25_Mannschaftsposter_web.jpg" alt="">
 <h2>Facts</h2>
+<h3> Mannschaften</h3>
+<p>1 NLA Mannschaft (SCL Tigers AG) </p>
+<p>10 Nachwuchsmannschaften (SCL Young Tigers AG)</p>
+<h3>Gründungsdaten</h3>
+<p>26.11.1999 (AG)</p>
+<p>30.01.1946 (Verein)</p>
 </main>
