--- a/views/stadion.handlebars
+++ b/views/stadion.handlebars
@@ -5,10 +5,10 @@
 <main>
 <h1>Stadion</h1>
 <a href="https://www.google.com/maps?sca_esv=9586d337a77313cc&biw=1728&bih=872&output=search&q=ilfisstadion&source=lnms&fbs=ABzOT_DDfJxgmsKFIwrWKcoyw2Rf7ED7CYyDAoRz3agYVnoe8VAVUj8jY7bzj3Yzz6dZJioa5EqAgeOwcVZjsLRLl6TGlMLZu5jDyIulMv7ctv1HhCPZro3t7rSzeSUBQ6dRUEjsuVhYAni9QcLNPfoJSEC-u1OOr2Ah94-i5rfrlmkDGOp8jNIWslGVU1XSDz9EztnWgSHqw6esDYqGdrelJf6wN-Dvg7oN4TJffep2dTS1MCZwW6E&entry=mc&ved=1t:200715&ictx=111"><p>Güterstrasse 14, 3550 Langnau im Emmental</p></a>
-<img src="/uploads/stadion-1.jpg" alt="stadion">
-<img src="/uploads/stadion-2.jpg" alt="stadion">
-<img src="/uploads/stadion-3.jpg" alt="stadion">
-<img src="/uploads/stadion-4.webp" alt="stadion">
+<img src="/uploads/stadion-1.jpg" alt="stadion" class="stadion-picture">
+<img src="/uploads/stadion-2.jpg" alt="stadion" class="stadion-picture">
+<img src="/uploads/stadion-3.jpg" alt="stadion" class="stadion-picture">
+<img src="/uploads/stadion-4.webp" alt="stadion" class="stadion-picture">
 
 
 
